--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,21 @@ ui-debug.log
 pubsub-debug.log
 *.log
 
-# Service account keys (NEVER commit these)
+# Service account keys and credentials (NEVER commit these)
 *-service-account.json
 service-account.json
 *-adminsdk-*.json
+*.p12
+*.pem
+*.key
+*credentials*.json
+*secret*.json
+.gcp-credentials.json
+
+# Private keys
+*.key
+*.pfx
+*.p8
 
 # IDE
 .idea/
@@ -51,3 +62,22 @@ temp/
 *.tsbuildinfo
 .eslintcache
 .turbo
+
+# Vercel
+.vercel
+
+# Sentry
+.sentryclirc
+
+# Local Netlify folder
+.netlify
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Backup files
+*.bak
+*.backup
