--- a/functions/.env.example
+++ b/functions/.env.example
@@ -1,6 +1,6 @@
 # Stripe
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 
 # Optional: For local development with service account
-GOOGLE_APPLICATION_CREDENTIALS=./service-account.json
+# GOOGLE_APPLICATION_CREDENTIALS=./service-account.json
